# graph_electrostatics

./: .gitignore  README.md  pyproject.toml  setup.cfg
docs/: README.md  electrostatics_units.md  energy.md  features.md  fourier.md  gto_electrostatics.md  interpolator.md  kspace.md  realspace.md  units.md
docs/maths/: densities_and_projections.md  fourier.md  gto.md
examples/: energy_and_features.ipynb
graph_longrange/: __init__.py  energy.py  features.py  gto_utils.py  kspace.py  realspace_electrostatics.py  realspace_grid_integrals.py  slabs.py  utils.py
tests/: test_features_multichannel.py  test_fourier_gto.py  test_gto_basis_reference.py  test_realspace_gto.py
tests/reference_data/: gto_basis_old_reference.npz
