[metadata]
name = graph_longrange
version = attr: graph_longrange.__version__
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3.8

[options]
packages = find:
python_requires = >=3.8
install_requires =
    torch>=1.8
    e3nn==0.4.4
    numpy
    ase